# rust_weather_app

./: README.md
weather_api/: Cargo.toml  weather.db
weather_api/src/: delete_one.rs  forecast.rs  main.rs  one_city.rs  pick_one.rs  random.rs  random_city.rs  ten_cities.rs
weather_api/src/cities/: Cargo.toml
weather_api/src/cities/src/: main.rs
weather_api/src/forecast/: Cargo.toml
weather_api/src/forecast/src/: main.rs
weather_api/src/libs/: mod.rs  queries.rs
weather_api/src/libs/data/: database.rs  queries.rs
weather_api/src/one_city/: Cargo.toml
weather_api/src/one_city/src/: main.rs
weather_api/src/selected/: Cargo.toml
weather_api/src/selected/src/: main.rs
