[package]
name = "weather_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde_json = "1.0.69"
rusqlite = "0.26.0"
chrono = "0.4.19"

# tokio = { version = "1.0", features = ["full"] } # for async version of reqwest (not used here)